weblate/static/style-dark.css
/* ... */
.card:has(.card-header.text-bg-danger)
  > .card-footer
  + .card-collapse
  > .card-body {
  border-bottom-color: #484d50;
}
.close {
  color: #fffdfa;
  text-shadow: #1a1d1e 0px 1px 0px;
}
.close:hover,
.close:focus {
  color: #fffdfa;
  text-decoration-color: currentcolor;
}
button.close {
  background-color: transparent;
  background-image: none;
  border-color: currentcolor;
}
.btn-close {
  color: #fffdfa;
  text-shadow: #1a1d1e 0px 1px 0px;
}
.btn-close:hover,
.btn-close:focus {
  color: #fffdfa;
  text-decoration-color: currentcolor;
}
.modal {
  outline-color: currentcolor;
}
.modal-content {
  background-color: #1a1d1e;
  border-color: rgba(154, 143, 127, 0.2);
  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 9px;
  outline-color: currentcolor;
}
.modal-backdrop {
  background-color: #000000;
}
.modal-header {
  border-bottom-color: #3d4244;
}
.modal-footer {
  border-top-color: #3d4244;
}
@media (min-width: 768px) {
  .modal-content {
    box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 15px;
  }
}
.text-hide {
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border-color: currentcolor;
}
.multi-wrapper {
  border-color: #444b4d;
}
.multi-wrapper .non-selected-wrapper {
  background-color: #1e2021;
  background-image: none;
  border-right-color: #444b4d;
}
.multi-wrapper .selected-wrapper {
  background-color: #1a1d1e;
  background-image: none;
}
.multi-wrapper .header {
  color: #c8c2b7;
}
.multi-wrapper .item:hover {
  background-color: #272a2b;
  background-image: none;
}
.multi-wrapper .search-input {
  border-color: currentcolor currentcolor #444b4d;
  outline-color: currentcolor;
}
.multi-wrapper .non-selected-wrapper .item.disabled,
.multi-wrapper .selected-wrapper .item.disabled {
  text-decoration-color: currentcolor;
}
.multi-wrapper .non-selected-wrapper .item.disabled:hover,
.multi-wrapper .selected-wrapper .item.disabled:hover {
  background-color: inherit;
  background-image: inherit;
}
.progress {
  box-shadow: none;
}
.progress-bar {
  box-shadow: none;
}
.progress-bar-dark {
  background-color: #575f62;
}
.progress-table > tbody > tr > th,
.progress-table > tbody > tr > td {
  border-color: currentcolor;
}
.progress-row .progress,
.chart-progress {
  border-color: currentcolor;
}
.progress-bar-success {
  background-color: rgba(28, 143, 117, 0.6);
}
.chart-progress .progress-bar-success {
  background-color: #29b396;
}
footer li {
  list-style-image: none;
  color: #d5d0c7;
  border-color: currentcolor;
}
footer a {
  color: #dcd7cf;
}
ul.legend li {
  list-style-image: none;
}
.translatetext {
  background-color: #25282a !important;
}
.current_translation,
.current_translation > td {
  background-color: #212324;
}
.hlcheck,
.token.placeable {
  outline-color: #394461;
  background-color: #292c2d;
}
.glossary-term {
  outline-color: #394461;
  background-color: #434300;
}
.hlmatch {
  background-color: #8c690c;
}
.hlspace,
.nbsp {
  outline-color: #c50000;
  color: #d5d0c7;
}
ins,
ins .hlcheck,
span.replacement {
  background-color: #2c7a13;
  color: #d9d3cc;
}
del,
del .hlcheck,
span.replaced {
  color: #d9d3cc;
  background-color: #8f0303;
}
.sort-cell,
.sort-cell a {
  color: #d9d3cc;
}
.sort-cell:hover,
.sort-cell:hover a {
  color: #6cf8d8;
  text-decoration-color: currentcolor;
}
th .sort-icon.sort-up {
  background-image: url("sort/up-dark.svg");
}
th .sort-icon.sort-down {
  background-image: url("sort/down-dark.svg");
}
th:hover .sort-icon {
  background-image: url("sort/hover-down.svg");
}
th:hover .sort-icon.sort-up {
  background-image: url("sort/hover-up.svg");
}
.bignumbers .col-md-4:first-child {
  border-left-color: currentcolor;
}
@media only screen and (min-width: 992px) {
  .bignumbers .col-md-4 {
    border-left-color: #5c6467;
  }
}
.login-links,
form + .login-label {
  border-top-color: #444b4d;
}
.login-links li {
  list-style-image: none;
}
.table .history-row td {
  border-top-color: currentcolor;
}
.history-row + .history-row td {
  border-top-color: #3b4043;
}
.comment-content {
  background-color: #1c3337;
}
.comment-content blockquote {
  border-left-color: #404448;
}
.comment-source {
  background-color: #371c25;
}
.comment-resolved {
  background-color: #1a1d1e;
  color: #d5d0c7;
}
.btn-float {
  background-color: #1a1d1e;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
}
kbd {
  border-color: #484d50;
  box-shadow: none;
}
.zen-unit:nth-child(2n) {
  background-color: #1e2122;
}
.zen-unit .list-group-item {
  border-color: #484d50;
}
.stripe-odd {
  background-color: #1e2122;
}
.history .list-group-item {
  background-color: inherit;
}
.badge-warning {
  background-color: #796034;
}
.badge-danger {
  background-color: #ac2109;
}
.invalid-format {
  text-decoration-color: currentcolor;
}
.clickable-row:hover {
  background-color: #282b2c;
}
.nav-pills > li > a,
.btn-default {
  color: #6cf8d8;
}
.nav-pills > li > a {
  border-color: transparent;
}
.nav-pills > .active > a,
.nav > .active > a:hover {
  border-color: #887f70;
}
.nav-pills > li > a:hover,
.nav-pills > li > a:focus,
.nav-pills .open > a,
.nav-pills .open > a:hover,
.nav-pills .open > a:focus {
  border-color: #3b4043;
}
.btn-default:hover,
.nav-pills > li > a:hover,
.nav-pills > li > a:focus,
.nav-pills .open > a,
.nav-pills .open > a:hover,
.nav-pills .open > a:focus {
  color: #ddd9d1;
  background-color: rgba(0, 0, 0, 0);
  background-image: none;
}
.bread-icon path,
.profile-icon circle,
.profile-icon path {
  fill: #d5d0c7;
}
.breadcrumb a {
  color: #d9d3cc !important;
}
.badge.length,
.badge.license {
  color: #fffdfa;
  background-color: #404548;
}
.table > thead > tr > th {
  border-bottom-color: #484d50;
}
.table-listing,
.table-listing > thead > tr > th,
.table-listing > tbody > tr > th,
.table-listing > tbody > tr > td {
  border-color: currentcolor;
}
.btn-primary,
.btn-warning,
.btn-danger,
.btn-info {
  border-color: currentcolor;
}
.btn-info {
  border-color: #24a286;
}
.btn-link.btn-xs {
  border-color: currentcolor;
}
/* ... */

